--- a/cv_sandro.tex
+++ b/cv_sandro.tex
@@ -21,11 +21,11 @@
 % adjust the page margins
 \usepackage[scale=0.88]{geometry}
 \setlength{\hintscolumnwidth}{2cm}                % if you want to change the width of the column with the dates
-\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
+\setlength{\makecvtitlenamewidth}{21cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
 % personal data
 \name{Sandro}{Loch}
-\title{Full Stack TI}                               % optional, remove / comment the line if not wanted
+\title{FullStack TI}                               % optional, remove / comment the line if not wanted
 
 \phone[mobile]{+55 ~(47)~98455~6932}                   % optional, remove / comment the line if not wanted
 %\phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
@@ -47,50 +47,42 @@
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
 
-\section{Resumen}
-\cventry{}{Analista e Desenvolvedor de sistemas com experiencia em projetos OpenSource}{}{}{}{}{}
+\section{Resumo}
+\cventry{}{Desenvolvedor de sistemas de projetos OpenSource - Conhecimentos em workflow, GitHub, Infraestrutura, Framework Web Django, Docker, Postgres, Python}{}{}{}{}{}
 
 \section{Experiencia Laboral}
 
+\cventry{2019}{Desenvolvedor Python - TI - Plataforma de AlertaDengue de Arboviroses }{FIOTEC}{}{}{}{}{}
 
-\cventry{2005--2005}{Comerciante de produtos coloniais.}{DELICIAS DA ROÇA}{}{}{}{}{}\\
+\cventry{2016 - 2017}{Comerciante de produtos coloniais}{DELICIAS DA ROÇA}{}{}{}{}{}
 
-\cventry{2005--2005}{Garçom de Sala }{RESTAURANTE PEQUENO PRINCIPE}{}{}{}{}{}\\
+\cventry{2014 – 2016}{Atendente de Confeitaria - Caixa}{CAFETERIA GERONA 13}{Alicante/España}{}{}{}{}
 
-\cventry{2005--2005}{Garçom – Preparação e atendente de Confeitaria, 
-Caixa. }{CAFETERIA GERONA 13}{}{}{}{}{}\\
+\cventry{2014}{Administrativo - Contas a receber - Vendas - Suprimentos}{ALMA PET SHOP}{}{}{}{}{}
 
-\cventry{2005--2005}{Administrativo - Contas a receber - Vendas - Atendimento telefonico}{ ALMA PET SHOP}{}{}{}{}{}\\
-
-\cventry{2005--2005}{Recepção, Check In / Check Out – Agente de Reservas -
+\cventry{2013 – 2014}{Recepção, Check In / Check Out – Agente de Reservas -
 Compras – Controle de centro de custos – Auditoría -
-Elaboração de planilhas para gestão financeira. }{IMBASSAI HOSTEL LUJIMBA}{}{}{}{}{}\\
+Elaboração de planilhas para gestão financeira}{IMBASSAI HOSTEL LUJIMBA}{Bahia/Brasil}{}{}{}{}
 
-\cventry{2006--2007}{Recepção, Check In / Check Out – Agente de Reservas }{KAYROS BUSINESS HOTEL}{}{}{}{}{}\\
+\cventry{2011}{Prospecção e captação de clientes - Consultoria e vendas de soluções (Software, Hardware e Serviços) em TI - Elaboração de projetos e propostas comerciais}{OPENS TECNOLOGIA}{}{}{}{}{}
 
-\cventry{2006--2007}{Prospecção e captação de clientes.
-Consultoria e vendas de soluções (Software, Hardware e Serviços) em TI.
-Elaboração de projetos e propostas comerciais.}{OPENS TECNOLOGIA}{}{}{}{}{}\\
+\cventry{2007 – 2011}{Barman, preparação e elaboração de cocktails - Abertura e fechamento de caixas - Controle de estoque e pedidos de mercadorias}{PUB / TABERNA LA BOCA DEL LOBO}{Madrid/España}{}{}{}{}
 
-\cventry{2005--2005}{Barman. Preparação e elaboração de cocktails.
-Abertura e fechamento de caixas. Balance e pedidos de mercadorias.}{ PUB / TABERNA LA BOCA DEL LOBO}{}{}{}{}{}\\
+\cventry{2005 – 2006}{Instalação de Access Point, antenas wireless, modems ADSL, router, switch - Instalação, configuração e manutenção de servidores}{TFI NETWORKS INFORMATICA LTDA}{}{}{}{}{}
 
-\cventry{2005--2005}{Instalação de Access Point, antenas wireless, modems ADSL, router, switch.
-Instalação, configuração e manutenção de servidores}{TFI NETWORKS INFORMATICA LTDA}{}{}{}{}{}\\
+\cventry{2003 – 2005}{Suporte em T.I, Montagem, instalação e manutenção de computadores e software - Gerenciamento de redes, servidores, infraestrutura e Active Directory - Faturamento, análises e elaboração de planilhas e relatórios estatísticos gerenciais, metas e controle de faturamento - Fechamento de comissões e pagamentos para representantes}{ADLIN PLASTICOS LTDA}{}{}{}{}{}
 
-\cventry{2002--2004}{Suporte em T.I, Montagem, instalação e manutenção de computadores e software. Gerenciamento de redes, servidores, infraestrutura e Active Directory - Faturamento, análises e elaboração de planilhas e relatórios estatísticos gerenciais, metas e controle de faturamento. Fechamento de comissões e pagamentos para representantes.}{ADLIN PLASTICOS LTDA}{}{}{}{}{}\\
+\cventry{2003}{Suporte on-line e prestação de serviços ao cliente}{TECNOFLEX SERVICIOS LTDA}{}{}{}{}{}
 
-\cventry{2002--2002}{Suporte on-line e prestação de serviços ao cliente.}{TECNOFLEX SERVICIOS LTDA}{}{}{}{}{}\\
+\cventry{2001--2003}{Vendas, Caixa, análises e elaboração de planilhas e relatórios de controle de estoque, metas, faturamento e devoluções - Suporte informático}{INDUSTRIA Y COMERCIOS BREITHAUPT S/A}{}{}{}{}{}
 
-\cventry{2003--2004}{Vendas, Caixa, análises e elaboração de planilhas e relatórios de controle de estoque, metas e controle de faturamento. Controle de devoluções - Suporte informático.}{INDUSTRIA Y COMERCIOS BREITHAUPT S/A}{}{}{}{}{}\\
-
-\section{Formação Academica}
-\cventry{2003}{Ensino Médio}{EEHB}{Jaraguá do Sul/Brasil}{}{}  % arguments 3 to 6 can be left empty
+\section{Formação Acadêmica}
+\cventry{2001}{Ensino Médio}{EEHB}{Jaraguá do Sul/Brasil}{}{}{}{}  % arguments 3 to 6 can be left empty
 
 
+\section{Cursos complementares}
 
-
-\section{Cursos complementarios}
+\cvlistitem{\textbf{Introduction to Python} DataCamp (2019)}
 
 \cvlistitem{\textbf{Instalação e configuração SNEP (Asterisk, Troncos SIP/IAX, Khomp,
 TDM/Virtual, Telefonia IP, Softphones) }OPENS TECNOLOGIA (2011)}
@@ -99,41 +91,27 @@ TDM/Virtual, Telefonia IP, Softphones) }OPENS TECNOLOGIA (2011)}
 Switches, e Aperfeiçoamento de protocolos TCP/IP } SENAC/CISCO (2006)}
 \cvlistitem{\textbf{Windows 2000/03Server / Conceitos básicos em redes} TREITEC (2004)}
 \cvlistitem{\textbf{Windows 2000/03 Server / Infraestrutura e Active Directory  }TREITEC (2004)}
-\cvlistitem{\textbf{Formação de vendedores }EXTENSION EMPRESARIAL LTDA (2001)}
-\cvlistitem{\textbf{Habilitação em Pacote office }ESCOLAS SID INFORMÁTICA (1999)}
+\cvlistitem{\textbf{Formação de Vendedores }EXTENSION EMPRESARIAL LTDA (2001)}
+\cvlistitem{\textbf{Pacote office }ESCOLAS SID INFORMÁTICA (1999)}
 
-\section{Languages}
-\cvitemwithcomment{Portugués}{Nativo}{}
-\cvitemwithcomment{Español}{Fluído}{}
-\cvitemwithcomment{Inglés}{Básico}{}
-\cvitemwithcomment{Francês}{Básico}{}
 
 %\section{Extra 2}
 %\cvlistdoubleitem{Item 1}{Item 4}
 %\cvlistdoubleitem{Item 2}{Item 5\cite{book1}}
 %\cvlistdoubleitem{Item 3}{Item 6. Like item 3 in the single column list before, this item is particularly long to wrap over several lines.}
 
-%\section{References}
-%\begin{cvcolumns}
-%  \cvcolumn{Category 1}{\begin{itemize}\item Person 1\item Person 2\item Person 3\end{itemize}}
-%  \cvcolumn{Category 2}{Amongst others:\begin{itemize}\item Person 1, and\item Person 2\end{itemize}(more upon request)}
-%  \cvcolumn[0.5]{All the rest \& some more}{\textit{That} person, and \textbf{those} also (all available upon request).}
-%\end{cvcolumns}
+\section{Languages}
 
-% Publications from a BibTeX file without multibib
-%  for numerical labels: \renewcommand{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}% CONSIDER MERGING WITH PREAMBLE PART
-%  to redefine the heading string ("Publications"): \renewcommand{\refname}{Articles}
-\nocite{*}
-\bibliographystyle{plain}
-\bibliography{publications}                        % 'publications' is the name of a BibTeX file
-% Publications from a BibTeX file using the multibib package
-%\section{Publications}
-%\nocitebook{book1,book2}
-%\bibliographystylebook{plain}
-%\bibliographybook{publications}                   % 'publications' is the name of a BibTeX file
-%\nocitemisc{misc1,misc2,misc3}
-%\bibliographystylemisc{plain}
-%\bibliographymisc{publications}                   % 'publications' is the name of a BibTeX file
+\begin{cvcolumns}
+  \cvcolumn{Português}{\begin{itemize}\item Nativo\end{itemize}}
+  \cvcolumn{Español}{\begin{itemize}\item Bilíngue\end{itemize}}
+  \cvcolumn{Inglês}{\begin{itemize}\item Técnico\end{itemize}}
+  \cvcolumn{Francês}{\begin{itemize}\item Básico\end{itemize}}
+
+\end{cvcolumns}
+
+
+
 
 \end{document}
 
