--- a/cv_sandro.tex
+++ b/cv_sandro.tex
@@ -43,76 +43,91 @@
 %            content
 %----------------------------------------------------------------------------------
 \begin{document}
-%\begin{CJK*}{UTF8}{gbsn}                          % to typeset your resume in Chinese using CJK
-%-----       resume       ---------------------------------------------------------
-\makecvtitle
-
-\section{Resumo}
-\cventry{}{Desenvolvedor de sistemas de projetos OpenSource - Conhecimentos em workflow, GitHub, Infraestrutura, Framework Web Django, Docker, Postgres, Python}{}{}{}{}{}
-
-\section{Experiencia Laboral}
-
-\cventry{2019}{Desenvolvedor Python - TI - Plataforma de AlertaDengue de Arboviroses }{FIOTEC}{}{}{}{}{}
-
-\cventry{2016 - 2017}{Comerciante de produtos coloniais}{DELICIAS DA ROÇA}{}{}{}{}{}
-
-\cventry{2014 – 2016}{Atendente de Confeitaria - Caixa}{CAFETERIA GERONA 13}{Alicante/España}{}{}{}{}
-
-\cventry{2014}{Administrativo - Contas a receber - Vendas - Suprimentos}{ALMA PET SHOP}{}{}{}{}{}
-
-\cventry{2013 – 2014}{Recepção, Check In / Check Out – Agente de Reservas -
-Compras – Controle de centro de custos – Auditoría -
-Elaboração de planilhas para gestão financeira}{IMBASSAI HOSTEL LUJIMBA}{Bahia/Brasil}{}{}{}{}
-
-\cventry{2011}{Prospecção e captação de clientes - Consultoria e vendas de soluções (Software, Hardware e Serviços) em TI - Elaboração de projetos e propostas comerciais}{OPENS TECNOLOGIA}{}{}{}{}{}
-
-\cventry{2007 – 2011}{Barman, preparação e elaboração de cocktails - Abertura e fechamento de caixas - Controle de estoque e pedidos de mercadorias}{PUB / TABERNA LA BOCA DEL LOBO}{Madrid/España}{}{}{}{}
-
-\cventry{2005 – 2006}{Instalação de Access Point, antenas wireless, modems ADSL, router, switch - Instalação, configuração e manutenção de servidores}{TFI NETWORKS INFORMATICA LTDA}{}{}{}{}{}
-
-\cventry{2003 – 2005}{Suporte em T.I, Montagem, instalação e manutenção de computadores e software - Gerenciamento de redes, servidores, infraestrutura e Active Directory - Faturamento, análises e elaboração de planilhas e relatórios estatísticos gerenciais, metas e controle de faturamento - Fechamento de comissões e pagamentos para representantes}{ADLIN PLASTICOS LTDA}{}{}{}{}{}
-
-\cventry{2003}{Suporte on-line e prestação de serviços ao cliente}{TECNOFLEX SERVICIOS LTDA}{}{}{}{}{}
-
-\cventry{2001--2003}{Vendas, Caixa, análises e elaboração de planilhas e relatórios de controle de estoque, metas, faturamento e devoluções - Suporte informático}{INDUSTRIA Y COMERCIOS BREITHAUPT S/A}{}{}{}{}{}
-
-\section{Formação Acadêmica}
-\cventry{2001}{Ensino Médio}{EEHB}{Jaraguá do Sul/Brasil}{}{}{}{}  % arguments 3 to 6 can be left empty
-
-
-\section{Cursos complementares}
-
-\cvlistitem{\textbf{Introduction to Python} DataCamp (2019)}
-
-\cvlistitem{\textbf{Instalação e configuração SNEP (Asterisk, Troncos SIP/IAX, Khomp,
-TDM/Virtual, Telefonia IP, Softphones) }OPENS TECNOLOGIA (2011)}
-\cvlistitem{\textbf{Operador Técnico de Som }ESCUELAS CEV COMUNICACION-IMAGEN-SONIDO (2008)}
-\cvlistitem{\textbf{CCNA Network; Configuração e implantação de redes e router;
-Switches, e Aperfeiçoamento de protocolos TCP/IP } SENAC/CISCO (2006)}
-\cvlistitem{\textbf{Windows 2000/03Server / Conceitos básicos em redes} TREITEC (2004)}
-\cvlistitem{\textbf{Windows 2000/03 Server / Infraestrutura e Active Directory  }TREITEC (2004)}
-\cvlistitem{\textbf{Formação de Vendedores }EXTENSION EMPRESARIAL LTDA (2001)}
-\cvlistitem{\textbf{Pacote office }ESCOLAS SID INFORMÁTICA (1999)}
-
-
-%\section{Extra 2}
-%\cvlistdoubleitem{Item 1}{Item 4}
-%\cvlistdoubleitem{Item 2}{Item 5\cite{book1}}
-%\cvlistdoubleitem{Item 3}{Item 6. Like item 3 in the single column list before, this item is particularly long to wrap over several lines.}
-
-\section{Languages}
-
-\begin{cvcolumns}
-  \cvcolumn{Português}{\begin{itemize}\item Nativo\end{itemize}}
-  \cvcolumn{Español}{\begin{itemize}\item Bilíngue\end{itemize}}
-  \cvcolumn{Inglês}{\begin{itemize}\item Técnico\end{itemize}}
-  \cvcolumn{Francês}{\begin{itemize}\item Básico\end{itemize}}
-
-\end{cvcolumns}
-
-
-
-
+	%\begin{CJK*}{UTF8}{gbsn}                          % to typeset your resume in Chinese using CJK
+	%-----       resume       ---------------------------------------------------------
+	\makecvtitle
+	
+	\section{Resumo}
+	\cventry{}{Desenvolvedor de sistemas de projetos OpenSource - Conhecimentos em workflows, GitHub, Infraestrutura, Framework Web Django, Docker, Postgres, Python e Linux}{}{}{}{}{}
+	
+	\section{Experiencia Laboral}
+	
+	\cventry{2019 - Atual}{Desenvolvedor Python - TI - Plataforma de AlertaDengue de Arboviroses }{FIOTEC}{}{}{}{}{}
+	
+	\cventry{2011}{Prospecção e captação de clientes - Consultoria e vendas de soluções (Software, Hardware e Serviços) em TI - Elaboração de projetos e propostas comerciais}{OPENS TECNOLOGIA}{}{}{}{}{}
+	
+	\cventry{2005 – 2006}{Instalação de Access Point, antenas wireless, modems ADSL, router, switch - Instalação, configuração e manutenção de servidores}{TFI NETWORKS INFORMATICA LTDA}{}{}{}{}{}
+	
+	\cventry{2003 – 2005}{Suporte em T.I, Montagem, instalação e manutenção de computadores e software - Gerenciamento de redes, servidores, infraestrutura e Active Directory - Faturamento, análises e elaboração de planilhas e relatórios estatísticos gerenciais, metas e controle de faturamento - Fechamento de comissões e pagamentos para representantes}{ADLIN PLASTICOS LTDA}{}{}{}{}{}
+	
+	\cventry{2003}{Suporte on-line e prestação de serviços ao cliente}{TECNOFLEX SERVICIOS LTDA}{}{}{}{}{}
+	
+	\cventry{2001--2003}{Vendas, Caixa, análises e elaboração de planilhas e relatórios de controle de estoque, metas, faturamento e devoluções - Suporte informático}{INDUSTRIA Y COMERCIOS BREITHAUPT S/A}{}{}{}{}{}
+	
+	\section{Formação Acadêmica}
+	\cventry{2001}{Ensino Médio}{EEHB}{Jaraguá do Sul/Brasil}{}{}{}{}  % arguments 3 to 6 can be left empty
+	
+	
+	\section{Cursos complementares}
+	
+	\cvlistitem{\textbf{Fundamentos de Estatística} LabTime (CAPES) (Nov 11, 2020)}
+	
+	\cvlistitem{\textbf{Introduction to Data Visualization with Matplotlib} DataCamp (Sep 16, 2020)}
+	
+	\cvlistitem{\textbf{Visualizing Geospatial Data in Python} DataCamp (Sep 08, 2020)}
+	
+	\cvlistitem{\textbf{Unit Testing for Data Science in Python} DataCamp (Jun 10,2020)}
+	
+	\cvlistitem{\textbf{Intermediate Importing Data in Python} DataCamp (My 28, 2020)}
+	
+	\cvlistitem{\textbf{Introduction to SQL} DataCamp (May 22, 2020)}
+	
+	\cvlistitem{\textbf{Introduction to Importing Data in Python} DataCamp (May 13, 2020}
+	
+	\cvlistitem{\textbf{Bash Scripting} DataCamp (May 20, 2020)}
+	
+	\cvlistitem{\textbf{Conda Essentials} DataCamp (May 04, 2020)}
+	
+	\cvlistitem{\textbf{Git} DataCamp (May 01, 2020)}
+	
+	\cvlistitem{\textbf{Manipulating DataFrames with Pandas} DataCamp (Jan 14, 2020)}
+	
+	\cvlistitem{\textbf{Introduction to Python} DataCamp (Jan 06,2020)}
+	
+	\cvlistitem{\textbf{Instalação e configuração SNEP (Asterisk, Troncos SIP/IAX, Khomp, TDM/Virtual, Telefonia IP, Softphones) }OPENS TECNOLOGIA (2011)}
+	
+	\cvlistitem{\textbf{CCNA Network; Configuração e implantação de redes e router, Switches, e Aperfeiçoamento de protocolos TCP/IP } SENAC/CISCO (2006)}
+	
+	\cvlistitem{\textbf{Windows 2000/03Server / Conceitos básicos em redes} TREITEC (2004)}
+	
+	\cvlistitem{\textbf{Windows 2000/03 Server / Infraestrutura e Active Directory  }TREITEC (2004)}
+	
+	\cvlistitem{\textbf{Delphi 6 Basic} ProWay Informática (Mar 08, 2003)}
+	
+	\cvlistitem{\textbf{Pacote office }ESCOLAS SID INFORMÁTICA (1999)}
+	
+	\section{Informações complementares}
+	
+	\cvlistitem{\textbf{Vivência na Espanha trabalhando na área de hotelaria e turismo} (2006-2011/2014-2016)}
+	
+	%\section{Extra 2}
+	%\cvlistdoubleitem{Item 1}{Item 4}
+	%\cvlistdoubleitem{Item 2}{Item 5\cite{book1}}
+	%\cvlistdoubleitem{Item 3}{Item 6. Like item 3 in the single column list before, this item is particularly long to wrap over several lines.}
+	
+	\section{Idiomas}
+	
+	\begin{cvcolumns}
+		\cvcolumn{Português}{\begin{itemize}\item Nativo\end{itemize}}
+		\cvcolumn{Español}{\begin{itemize}\item Bilíngue\end{itemize}}
+		\cvcolumn{Inglês}{\begin{itemize}\item Técnico\end{itemize}}
+		\cvcolumn{Francês}{\begin{itemize}\item Básico\end{itemize}}
+		
+	\end{cvcolumns}
+	
+	
+	
+	
 \end{document}
 
 
